--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Portafolio de Prueba</h1>
-    <img src="./e.JPG" width="500" alt="elefantes">
+    <img src="./e.jpg" width="500" alt="elefantes">
 </body>
 </html>
