--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Portafolio de Prueba</h1>
     <img src="https://cloudfront-us-east-1.images.arcpublishing.com/semana/Z7PAOG6COVDKVG4APQXGKLUKNY.jpg" width="500" alt="elefantes">
+    <img src=./e.jpg" width="500" alt="elefantes">
 </body>
 </html>
